# android-bindings

./: .gitignore  .gitmodules  Cargo.toml  README.md  makefile
.cargo/: config
.github/workflows/: android-bindings-dispatch.yaml  android-bindings-dispatch.yml  build-docker-dispatch.yaml
docker/: Dockerfile  rust-toolchain
lib-wrapper/android-bindings/: build.gradle  publish.gradle
src/: bindings.rs  error.rs
