[package]
name = "mc-android-bindings"
version = "6.0.2"
authors = ["MobileCoin"]
edition = "2021"
license = "GPL-3.0"

[lib]
name = "mobilecoin_android"
crate-type = ["cdylib"]

[profile.mobile]
inherits = "release"
debug = false
lto = true

[profile.mobile-release]
inherits = "mobile"
codegen-units = 1


[dependencies]
# External dependencies
crc = "3.0.0"
der = "0.7.8"

# fog
mc-fog-kex-rng = { path = "mobilecoin/fog/kex_rng" }

# mobilecoin
mc-account-keys = { path = "mobilecoin/account-keys" }
#mc-account-keys-slip10 = { path = "mobilecoin/account-keys/slip10" }
mc-api = { path = "mobilecoin/api" }
mc-core = { path = "mobilecoin/core" }
mc-attest-ake = { path = "mobilecoin/attest/ake", default-features = false }
mc-attest-core = { path = "mobilecoin/attest/core", default-features = false }
mc-attest-verifier = { path = "mobilecoin/attest/verifier", default-features = false }
mc-attest-verifier-types = { path = "mobilecoin/attest/verifier/types", default-features = false }
mc-attestation-verifier = "0.4.1"
mc-common = { path = "mobilecoin/common", features = ["std"] }
mc-crypto-box = { path = "mobilecoin/crypto/box" }
mc-crypto-keys = { path = "mobilecoin/crypto/keys" }
mc-crypto-noise = { path = "mobilecoin/crypto/noise" }
mc-crypto-ring-signature-signer = { path = "mobilecoin/crypto/ring-signature/signer", default-features = false }
mc-fog-report-types = { path = "mobilecoin/fog/report/types" }
mc-fog-report-resolver = { path = "mobilecoin/fog/report/resolver" }
mc-fog-report-validation = { path = "mobilecoin/fog/report/validation" }
mc-rand = "1.0"
mc-sgx-dcap-types = "0.9.0"
mc-transaction-core = { path = "mobilecoin/transaction/core" }
mc-transaction-builder = { path = "mobilecoin/transaction/builder" }
mc-transaction-extra = { path = "mobilecoin/transaction/extra" }
mc-util-encodings = { path = "mobilecoin/util/encodings" }
mc-util-from-random = { path = "mobilecoin/util/from-random" }
mc-util-serial = { path = "mobilecoin/util/serial" }
mc-util-uri = { path = "mobilecoin/util/uri" }

# third-party
aes-gcm = { version = "0.10.0", default-features = false }
anyhow = "1.0"
displaydoc = { version = "0.2", default-features = false }
generic-array = { version = "0.14", features = ["more_lengths", "serde"] }
jni = { version = "0.19.0", default-features = false }
protobuf = "2.27.1"
rand = { version = "0.8", default-features = false }
rand_chacha = { version = "0.3.1" }
sha2 = { version = "0.10", default-features = false }
slip10_ed25519 = "0.1.3"
tiny-bip39 = "1.0"
zeroize = "1.5"

[patch.crates-io]
# Fork and rename to use "OG" dalek-cryptography with latest dependencies.
bulletproofs-og = { git = "https://github.com/mobilecoinfoundation/bulletproofs.git", rev = "9abfdc054d9ba65f1e185ea1e6eff3947ce879dc" }

# mbedtls patched to allow certificate verification with a profile
mbedtls = { git = "https://github.com/mobilecoinfoundation/rust-mbedtls.git", rev = "f82523478a1dd813ca381c190175355d249a8123" }
mbedtls-sys-auto = { git = "https://github.com/mobilecoinfoundation/rust-mbedtls.git", rev = "f82523478a1dd813ca381c190175355d249a8123" }

# Fork and rename to use "OG" dalek-cryptography.
schnorrkel-og = { git = "https://github.com/mobilecoinfoundation/schnorrkel.git", rev = "049bf9d30f3bbe072e2ad1b5eefdf0f3c851215e" }

# Fixes the following:
# * Allow enabling `serde/std` without also requiring `serde_cbor/std` to be enabled.
#   See: https://github.com/pyfisch/cbor/pull/198
serde_cbor = { git = "https://github.com/mobilecoinofficial/cbor", rev = "4c886a7c1d523aae1ec4aa7386f402cb2f4341b5" }
